Agregar configuración de cliente de chat y opciones de OpenAI en application.yml